<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yoyo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="FDF">Follow\nDiscover\nFulfill</string>
    <string name="btn_discover">Discover</string>
    <string name="btn_register">Register</string>
    <string name="btn_log_in">Log in</string>
    <string name="search_hint">What do you want to be?...</string>

</resources>
