<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/txt_FDF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/FDF" />

    <LinearLayout
        android:id="@+id/ll_search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_FDF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <EditText
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_discover"
            android:onClick="discoverClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ll_search_bar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:onClick="registerClick" />

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_log_in"
            android:onClick="loginClick" />
    </LinearLayout>

</RelativeLayout>